--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div id="heading-card" class="card-panel grey lighten-5 z-depth-2">
 					<div id ="heading-card-content" class="row valign-wrapper">
 						<div class="col s2">
-							<img src="https://pbs.twimg.com/profile_images/677611907495288832/ETYIfrqd.jpg" alt="" class="circle responsive-img">
+							<img src="img/circleeinstein.jpg" alt="" class="circle responsive-img">
 							<!-- notice the "circle" class -->
 						</div>
 						<div class="col s10">
