added fontawesome, and links to gitter and github. invisible dates. todo: tooltip for each action share social media?

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
 	<!-- timeline deps -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -33,10 +35,9 @@
 				<i class="large material-icons">chat_bubble</i>
 			</a>
 			<ul>
-				<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-				<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-				<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-				<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+				<li><a class="btn-floating red" href="https://gitter.im/marcosfede/Einstein-Tribute-Page?utm_source=share-link&utm_medium=link&utm_campaign=share-link"><i class="fa fa-comments" aria-hidden="true"></i></a></li>
+				<li><a class="btn-floating blue"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				<li><a class="btn-floating green" href="https://github.com/marcosfede/Einstein-Tribute-Page"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 			</ul>
 		</div>
 		<!-- big image -->
@@ -48,7 +49,7 @@
 		<div id="timeline">
 			<div class="container">
 				<div class="row">
-					<div class="col s12 m8 offset-m2 l6 offset-l3">
+					<div class="col s12 m8 offset-m2 l8 offset-l2">
 						<div id="heading-card" class="card-panel grey lighten-5 z-depth-2">
 							<div id="heading-card-content" class="row valign-wrapper">
 								<div class="col s2">
